[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "Window" , "console", "Document", "Element", "HtmlElement",
  "CssStyleDeclaration", "HtmlDivElement"
] 
